--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,7 +1,8 @@
 .app{
-    max-width: 800px;
+    max-width: 505px;
     margin: 0 auto;
     display: flex;
+    padding-top: 50px;
     flex-direction: column;
     gap: 30px;
 }
